tools/data-handler/test/test-data/invalid/invalid-link-type-broken-card-type-ref/.cards/local/reports/eqNeReport/index.adoc.hbs
{{#each results}}
{{#if (eq this.title "Document Decisions with Decision Records")}}EQ_MATCH:{{this.key}}{{/if}}
{{#if (ne this.title "Document Decisions with Decision Records")}}NE_MATCH:{{this.key}}{{/if}}
{{/each}}